feat(line-up): Updates line-up design
Enhances the line-up page design with updated styling, content, and a new ticket button.

- Sets base href and deploy URL for production build.
- Modifies footer styles, adjusts footer radial gradient.
- Refactors spark button to support dynamic background images.
- Updates image paths and stage descriptions in lineup data.

--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,8 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/bachblyten/",
+              "deployUrl": "/bachblyten/",
               "budgets": [
                 {
                   "type": "initial",
