feat(gallery): Fetches Instagram feed
Adds a script to fetch the latest Instagram posts from
a public endpoint and displays them in the gallery.

This provides dynamic content to the gallery page.
Also adds a fallback in case the Instagram feed fails to load.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "fetch:instagram": "node scripts/fetch-instagram.cjs"
   },
   "prettier": {
     "printWidth": 100,
