Refactor(angular): Updates baseHref and deployUrl
Updates the `baseHref` and `deployUrl` in the `angular.json` file to root.
This is to ensure that the application is served from the root of the domain.

--- a/angular.json
+++ b/angular.json
@@ -35,8 +35,8 @@
           },
           "configurations": {
             "production": {
-              "baseHref": "/bachblyten/",
-              "deployUrl": "/bachblyten/",
+              "baseHref": "/",
+              "deployUrl": "/",
               "budgets": [
                 {
                   "type": "initial",
