feat(gh-pages): Adds CNAME record
Configures the deployment to add a CNAME file, ensuring the custom domain is correctly associated with the deployed application.

Removes the base path configuration from the build process, simplifying deployment to the root domain.

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -32,8 +32,11 @@ jobs:
 
       - name: Build
         env:
-          BASE_PATH: /${{ github.event.repository.name }}/
+          BASE_PATH: /
         run: npm run build -- --configuration production --base-href "$BASE_PATH"
+
+      - name: Add CNAME for custom domain
+        run: echo "bachblyten-festival.com" > dist/bachblyten/browser/CNAME
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
